JumpScript/tests/baselines/reference/parserErrorRecoveryIfStatement2.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/IfStatements/parserErrorRecoveryIfStatement2.jump(3,9): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/IfStatements/parserErrorRecoveryIfStatement2.jump(4,3): error TS1005: ')' expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/IfStatements/parserErrorRecoveryIfStatement2.jump (2 errors) ====
    class Foo {
      f1() {
        if (a
            ~
!!! error TS2304: Cannot find name 'a'.
      }
      ~
!!! error TS1005: ')' expected.
      f2() {
      }
      f3() {
      }
    }